         in Twig templates to declare internal links
 * [New] Brand new plugin system with dependencies (see `PicoPluginInterface`
         and `AbstractPicoPlugin`); if you're plugin dev, you really should
         take a look at the UPGRADE section of the docs!
 * [New] Introducing the `PicoDeprecated` plugin to maintain full backward
         compatibility with Pico 0.9 and older
 * [New] Support YAML-style meta header comments (`---`)
 * [New] Various new placeholders to use in content files (e.g. `%site_title%`)
 * [New] Provide access to all meta headers in content files (`%meta.*%`)
 * [New] Provide access to meta headers in `$page` arrays (`$page['meta']`)
 * [New] The file extension of content files is now configurable
 * [New] Add `Pico::setConfig()` method to predefine config variables
 * [New] Supporting per-directory `404.md` files
 * [New] #103: Providing access to `sub.md` even when the `sub` directory
         exists, provided that there is no `sub/index.md`
 * [New] #249: Support the `.twig` file extension for templates
 * [New] #268, 269: Now using Travis CI; performing basic code tests and
         implementing an automatic release process
 * [Changed] Complete code refactoring
 * [Changed] Source code now follows PSR code styling
 * [Changed] Replacing constants (e.g. `ROOT_DIR`) with constructor parameters
 * [Changed] Paths (e.g. `content_dir`) are now relative to Picos root dir
 * [Changed] Adding `Pico::run()` method that performs Picos processing and
             returns the rendered contents
 * [Changed] Renaming all plugin events; adding some new events
 * [Changed] `Pico_Plugin` is now the fully documented `DummyPlugin`
 * [Changed] Meta data must start on the first line of the file now
 * [Changed] Dropping the need to register meta headers for the convenience of
             users and pure (!) theme devs; plugin devs are still REQUIRED to
             register their meta headers during `onMetaHeaders`